Docker files added

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -80,14 +80,7 @@
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt-impl</artifactId>
-            <version>${jjwt.version}<
-
-
-
-
-
-
-            /version>
+            <version>${jjwt.version}</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
