--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -90,6 +90,13 @@
             <scope>runtime</scope>
         </dependency>
 
+        <!-- AWS CloudWatch Logs -->
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>cloudwatchlogs</artifactId>
+            <version>2.21.0</version>
+        </dependency>
+
         <!-- Lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
