--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -20,6 +20,16 @@ server {
         proxy_read_timeout 60s;
     }
 
+    # Proxy H2 Console to backend (^~ gives priority over regex locations)
+    location ^~ /h2-console/ {
+        proxy_pass http://backend:8080/h2-console/;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
     # Handle SPA routing
     location / {
         try_files $uri $uri/ /index.html;
